src/test/rustdoc-ui/intra-doc/disambiguator-mismatch.stderr
error: incompatible link kind for `S`
  --> $DIR/disambiguator-mismatch.rs:14:14
   |
LL | /// Link to [struct@S]
   |              ^^^^^^^^ help: to link to the enum, prefix with `enum@`: `enum@S`
   |
note: the lint level is defined here
  --> $DIR/disambiguator-mismatch.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = note: this link resolved to an enum, which is not a struct

error: incompatible link kind for `S`
  --> $DIR/disambiguator-mismatch.rs:19:14
   |
LL | /// Link to [mod@S]
   |              ^^^^^ help: to link to the enum, prefix with `enum@`: `enum@S`
   |
   = note: this link resolved to an enum, which is not a module

error: incompatible link kind for `S`
  --> $DIR/disambiguator-mismatch.rs:24:14
   |
LL | /// Link to [union@S]
   |              ^^^^^^^ help: to link to the enum, prefix with `enum@`: `enum@S`
   |
   = note: this link resolved to an enum, which is not a union

error: incompatible link kind for `S`
  --> $DIR/disambiguator-mismatch.rs:29:14
   |
LL | /// Link to [trait@S]
   |              ^^^^^^^ help: to link to the enum, prefix with `enum@`: `enum@S`
   |
   = note: this link resolved to an enum, which is not a trait

error: incompatible link kind for `T`
  --> $DIR/disambiguator-mismatch.rs:34:14
   |
LL | /// Link to [struct@T]
   |              ^^^^^^^^ help: to link to the trait, prefix with `trait@`: `trait@T`
   |
   = note: this link resolved to a trait, which is not a struct

error: incompatible link kind for `m`
  --> $DIR/disambiguator-mismatch.rs:39:14
   |
LL | /// Link to [derive@m]
   |              ^^^^^^^^ help: to link to the macro, add an exclamation mark: `m!`
   |
   = note: this link resolved to a macro, which is not a derive macro

error: incompatible link kind for `s`
  --> $DIR/disambiguator-mismatch.rs:44:14
   |
LL | /// Link to [const@s]
   |              ^^^^^^^ help: to link to the static, prefix with `static@`: `static@s`
   |
   = note: this link resolved to a static, which is not a constant

error: incompatible link kind for `c`
  --> $DIR/disambiguator-mismatch.rs:49:14
   |
LL | /// Link to [static@c]
   |              ^^^^^^^^ help: to link to the constant, prefix with `const@`: `const@c`
   |
   = note: this link resolved to a constant, which is not a static

error: incompatible link kind for `c`
  --> $DIR/disambiguator-mismatch.rs:54:14
   |
LL | /// Link to [fn@c]
   |              ^^^^ help: to link to the constant, prefix with `const@`: `const@c`
   |
   = note: this link resolved to a constant, which is not a function

error: incompatible link kind for `c`
  --> $DIR/disambiguator-mismatch.rs:59:14
   |
LL | /// Link to [c()]
   |              ^^^ help: to link to the constant, prefix with `const@`: `const@c`
   |
   = note: this link resolved to a constant, which is not a function

error: incompatible link kind for `f`
  --> $DIR/disambiguator-mismatch.rs:64:14
   |
LL | /// Link to [const@f]
   |              ^^^^^^^ help: to link to the function, add parentheses: `f()`
   |
   = note: this link resolved to a function, which is not a constant

error: aborting due to 11 previous errors

